--- a/config_parsing/config.conf
+++ b/config_parsing/config.conf
@@ -13,30 +13,8 @@
 
 # dont allow nested locations
 
-# Hello WOrld
-server 
-{
-	listen 4001;
-	listen 3535;
-    listen 127.0.0.1:4001;
-    
-	server_name localhost1 localhost2;
-	server_name localhost3;
-
-	root        ./www/main;
-	index index.html index2.html;
-	error_page 404 /404.html;
-	error_page 405 /405.html;
-    error_page 405 406 407 /404.html;
-}
-
 server {
-	listen 1212;
-	error_page 404 /404.html;
-	error_page 405 /405.html;
-    client_max_body_size 10000;
-
-	# I am a comment
+	listen 1111;
 	location     /        {
 		error_page 404        /404.html;
 		error_page 405 /405.html;
@@ -44,11 +22,51 @@ server {
 		index index.html;
         client_max_body_size 10000;
 	}
-	location /test {
-		alias       ./www/test;
-		autoindex on;
+	listen 2222;
+	listen 3333;
+	location     /loc2{
+		root       ./www/main;
 	}
-
+	listen 4444;
 }
+# }
+
+# Hello WOrld
+# server 
+# {
+# 	listen 4001;
+# 	listen 3535;
+#     listen 127.0.0.1:4001;
+    
+# 	server_name localhost1 localhost2;
+# 	server_name localhost3;
+
+# 	root        ./www/main;
+# 	index index.html index2.html;
+# 	error_page 404 /404.html;
+# 	error_page 405 /405.html;
+#     error_page 405 406 407 /404.html;
+# }
+
+# server {
+# 	listen 1212;
+# 	error_page 404 /404.html;
+# 	error_page 405 /405.html;
+#     client_max_body_size 10000;
+
+# 	# I am a comment
+# 	location     /        {
+# 		error_page 404        /404.html;
+# 		error_page 405 /405.html;
+# 		root       ./www/main;
+# 		index index.html;
+#         client_max_body_size 10000;
+# 	}
+# 	location /test {
+# 		alias       ./www/test;
+# 		autoindex on;
+# 	}
+
+# }
 
 
