handling error_page, client_max_body_size in location

--- a/config_parsing/config.conf
+++ b/config_parsing/config.conf
@@ -16,7 +16,7 @@
 server {
 	listen 1111;
 	location     /        {
-		error_page 404        /404.html;
+		error_page 404  501       /404.html;
 		error_page 405 /405.html;
 		root       ./www/main;
 		index index.html;
