--- a/config_parsing/bad_configs/location_block_root_1.conf
+++ b/config_parsing/bad_configs/location_block_root_1.conf
@@ -1,13 +1,13 @@
 
 # Hello WOrld
-server {
-	listen 3434;
-	listen 3535;
+# server {
+# 	listen 3434;
+# 	listen 3535;
 
-	root ./www/main;
-	index index.html;
+# 	root ./www/main;
+# 	index index.html;
 
-}
+# }
       
 
 server {
@@ -18,7 +18,7 @@ server {
 	location /test {
 		root ./www/main;
 		root ./www/main;
-		index index.html;
+		# index index.html;
 	}
 
 }
