creating servers and routes from server and location parsers

--- a/steffen/config_parsing/Makefile
+++ b/steffen/config_parsing/Makefile
@@ -6,7 +6,7 @@
 #    By: smatthes <smatthes@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/07/21 10:44:02 by smatthes          #+#    #+#              #
-#    Updated: 2024/11/15 17:25:43 by smatthes         ###   ########.fr        #
+#    Updated: 2024/11/16 19:04:15 by smatthes         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,10 +16,15 @@ CXXFLAGS 	= -Werror -Wextra -Wall -Wpedantic -fsanitize=address,undefined -Wshad
 # CXXFLAGS 	= -std=c++98
 
 TARGET 		= test
-FILES 		= main Config_Parser Server_Parser Location_Parser Directive Directive_Root util Directive_Alias Directive_Index Directive_Error_Page Directive_Client_Max_Body_Size Directive_Allowed_Methods Directive_Autoindex Directive_Listen Directive_Server_Name
-INCLUDES 	= ./ ./result/
+FILES 		= main Config_Parser Server_Parser Location_Parser Directive Directive_Root util Directive_Alias Directive_Index Directive_Error_Page Directive_Client_Max_Body_Size Directive_Allowed_Methods Directive_Autoindex Directive_Listen Directive_Server_Name Server_Creator Route_Creator Route Server
+INCLUDES 	= -I./ -I./result/
 SRC			= $(FILES:=.cpp)
 OBJ 		= $(SRC:.cpp=.o)
+PATHSRC		= ./ ./result/
+
+# specifies the path, where the compiler will look for files (e.g. *.c, *.h files)
+# that way, you dont have to specify full filepath when listing source files below
+VPATH = $(PATHSRC) 
 
 
 .PHONY: all clean fclean re
@@ -27,7 +32,7 @@ OBJ 		= $(SRC:.cpp=.o)
 all: ${TARGET}
 
 ${TARGET}: ${OBJ}
-	${CXX} ${CXXFLAGS} ${INCLUDES} ${OBJ} -o ${TARGET}
+	${CXX} ${CXXFLAGS} ${OBJ} -o ${TARGET}
 
 %.o: %.cpp
 	${CXX} $(CXXFLAGS) ${INCLUDES} -c $< -o $@
