--- a/steffen/config_parsing/config.conf
+++ b/steffen/config_parsing/config.conf
@@ -18,31 +18,40 @@ server {
 	listen 1112;
 	server_name fg sdfg sdaf;
 	location     /        {
-		error_page 404  501       /404.html;
+		error_page 404  501       /4041.html;
 		error_page 405 /405.html;
 		root       ./www/main;
-		index index.html;
+		index index1.html;
         client_max_body_size 10000;
+		# allowed_methods POST;
 	}
-	listen 2222;
-	listen 3333;
-	server_name fg sdfg;
-	location     /loc2{
+	location     /        {
+		error_page 404  501       /4041.html;
+		error_page 405 /405.html;
 		root       ./www/main;
-		allowed_methods GET GET;
+		index index1.html;
+        client_max_body_size 10000;
+		# allowed_methods POST;
 	}
-	listen 4444;
-	server_name test test;
+	# listen 2222;
+	# listen 3333;
+	# server_name fg sdfg;
+	# location     /loc2{
+	# 	root       ./www/main;
+	# 	allowed_methods GET GET;
+	# }
+	# listen 4444;
+	# server_name test test;
 }
 # }
 
 # Hello WOrld
-# server 
+# server
 # {
 # 	listen 4001;
 # 	listen 3535;
 #     listen 127.0.0.1:4001;
-    
+
 # 	server_name localhost1 localhost2;
 # 	server_name localhost3;
 
